--- a/Site/public/RandomizadorCaracter.html
+++ b/Site/public/RandomizadorCaracter.html
@@ -66,7 +66,7 @@
       Pontos:
     </div>
 
-    <img src="assets/imgs/Background/esperando.webp" alt="paimon" class="paimon">
+    <img id="img_paimon" src="assets/imgs/Background/esperando.webp" alt="paimon" class="paimon">
   </div>
 
 
