--- a/Site/public/Cadastro.html
+++ b/Site/public/Cadastro.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Genshin - Cadastro</title>
+    <title>Cadastro - Genshin</title>
 
     <script src="./JS/Cadastro.js"></script>
 
