botões em personagem

--- a/Site/public/Personagens.html
+++ b/Site/public/Personagens.html
@@ -48,15 +48,15 @@
       <button class="btBuscar" onclick="Buscar()">
         Buscar
       </button>
-      <div>
-        <button class="btBuscar">
-          Anterior
-        </button>
 
-        <button class="btBuscar">
-          Proximo
-        </button>
-      </div>
+      <button id="BtAnterior" class="btBuscar" onclick="Anterior()">
+        Anterior
+      </button>
+
+      <button id="BtProximo" class="btBuscar" onclick="Proximo()">
+        Proximo
+      </button>
+
       <br>
     </div><br>
     <select id="select_personagem">
