Inicio da implementação de dashboards

--- a/Site/public/RandomizadorCaracter.html
+++ b/Site/public/RandomizadorCaracter.html
@@ -7,6 +7,7 @@
   <title>Genshindle</title>
 
   <script src="JS/randomizador.js"></script>
+  <script src="JS/Cadastro.js"></script>
 
   <link rel="stylesheet" href="CSS/style.css">
   <link rel="stylesheet" href="CSS/randomizador.css">
@@ -62,8 +63,8 @@
     </div>
 
     <div id="div_pontuacao" class="container2">
-      usuario:<br><br>
-      Pontos:
+      usuario: <span id="b_usuario"></span><br><br>
+      Pontos: 0
     </div>
 
     <img id="img_paimon" src="assets/imgs/Background/esperando.webp" alt="paimon" class="paimon">
