modelagem logica final

--- a/Site/public/Cadastro.html
+++ b/Site/public/Cadastro.html
@@ -195,6 +195,7 @@
         var senhaVar = senha_input.value;
         var confirmacaoSenhaVar = confirmacao_senha_input.value;
         var personagemVar = select_personagem.value;
+        var pontosVar = 0;
         var fkPersonagemVar = 0
 
         ListaPersonagem = [
@@ -321,6 +322,7 @@
                     nomeServer: nomeVar,
                     emailServer: emailVar,
                     senhaServer: senhaVar,
+                    pontosServer: pontosVar,
                     fkPersonagemServer: fkPersonagemVar
                 }),
             })
