dashboard linkada com banco de dados

--- a/Site/public/RandomizadorCaracter.html
+++ b/Site/public/RandomizadorCaracter.html
@@ -44,6 +44,12 @@
   </div>
   <div class="div_corpo">
 
+    <div style="display: flex; left: 10px; position: absolute; top: 110px;">
+      <button class="btcomum">
+        <a href="estatisticas.html">Ver estatisticas</a>
+      </button>
+    </div>
+
     <div class="container1">
 
       <div class="div_borda">
