style da dashboard

--- a/Site/public/estatisticas.html
+++ b/Site/public/estatisticas.html
@@ -10,6 +10,7 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
     <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="CSS/estatistica.css">
     <link rel="icon" href="assets/imgs/Logo/Logo.jpg">
 
 </head>
@@ -24,10 +25,10 @@
                     <li>
                         <a href="index.html">Início</a>
                     </li>
-                    <li class="agora">
+                    <li >
                         <a href="#">Personagens</a>
                     </li>
-                    <li>
+                    <li class="agora">
                         <a href="RandomizadorCaracter.html">Quiz</a>
                     </li>
                 </ul>
@@ -41,18 +42,35 @@
                 </li>
             </ul>
         </div>
-    </div>
+    </div><br>
     <div>
-        <button class="btBuscar">
+        <button class="btcomum">
             <a href="RandomizadorCaracter.html">Voltar</a>
         </button>
     </div>
-    <div style="height: 40vh; width: 40vw;">
-        <canvas id="myChart1"></canvas>
+
+    <div class="div_kpi">
+        <div>
+           <h1>
+
+           </h1> 
+        </div>
+        <div>
+            <h1>
+
+            </h1>
+        </div>
     </div>
-    <div style="height: 40vh; width: 40vw;">
-        <canvas id="myChart2"></canvas>
+
+    <div class="div_dashboard">
+        <div style="height: 40vh; width: 40vw;">
+            <canvas id="myChart1"></canvas>
+        </div>
+        <div style="height: 40vh; width: 40vw;">
+            <canvas id="myChart2"></canvas>
+        </div>
     </div>
+
 
 </body>
 
