--- a/Site/public/RandomizadorCaracter.html
+++ b/Site/public/RandomizadorCaracter.html
@@ -14,7 +14,7 @@
   <link rel="icon" href="assets/imgs/Logo/Logo.jpg">
 </head>
 
-<body onload="Randomizar(), validarSessao()">
+<body onload="Randomizar(), validarSessao(), PegarPontoDoUsuario()">
   <div class="header">
     <div class="container">
       <img src="assets/imgs/Logo/Genshin_Impact_logo.svg.png" alt="genshin logo" height="70px">
