tela inicio feita

--- a/Site/public/RandomizadorCaracter.html
+++ b/Site/public/RandomizadorCaracter.html
@@ -14,7 +14,7 @@
   <link rel="icon" href="assets/imgs/Logo/Logo.jpg">
 </head>
 
-<body onload="Randomizar(), validarSessao(), PegarPontoDoUsuario()">
+<body onload="Randomizar(), validarSessao(), PegarPontos()">
   <div class="header">
     <div class="container">
       <img src="assets/imgs/Logo/Genshin_Impact_logo.svg.png" alt="genshin logo" height="70px">
@@ -69,8 +69,8 @@
     </div>
 
     <div id="div_pontuacao" class="container2">
-      usuario: <span id="b_usuario"></span><br><br>
-      Pontos: 0
+      usuario: <span id="usuario"></span><br><br>
+      Pontos: <span id="pontos"></span>
     </div>
 
     <img id="img_paimon" src="assets/imgs/Background/esperando.webp" alt="paimon" class="paimon">
