--- a/Site/public/estatisticas.html
+++ b/Site/public/estatisticas.html
@@ -26,7 +26,7 @@
                         <a href="index.html">Início</a>
                     </li>
                     <li>
-                        <a href="#">Personagens</a>
+                        <a href="Personagens.html">Personagens</a>
                     </li>
                     <li class="agora">
                         <a href="RandomizadorCaracter.html">Quiz</a>
