--- a/Site/public/index.html
+++ b/Site/public/index.html
@@ -1,46 +1,138 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Genshin | Página Inicial</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Genshin | Página Inicial</title>
 
-    <script src="./JS/Cadastro.js"></script>
+  <script src="./JS/Cadastro.js"></script>
 
-    <link rel="stylesheet" href="CSS/style.css">
-    <link rel="icon" href="assets/imgs/Logo/Logo.jpg">
+  <link rel="stylesheet" href="CSS/style.css">
+  <link rel="stylesheet" href="CSS/index.css">
+  <link rel="icon" href="assets/imgs/Logo/Logo.jpg">
 </head>
-<body onload="validarSessao()">
-  
-    <div class="header">
-        <div class="container">
-          <img src="assets/imgs/Logo/Genshin_Impact_logo.svg.png" alt="genshin logo" height="70px">
-          <div>
-            <ul class="navbar">
-            <li class="agora">
-              <a href="#">Início</a>
-            </li>
-            <li>
-              <a href="Personagens.html">Personagens</a>
-            </li>
-            <li>
-              <a href="RandomizadorCaracter.html">Quiz</a>
-            </li>
+
+<body>
+
+  <div class="header">
+    <div class="container">
+      <img src="assets/imgs/Logo/Genshin_Impact_logo.svg.png" alt="genshin logo" height="70px">
+      <div>
+        <ul class="navbar">
+          <li class="agora">
+            <a href="#">Início</a>
+          </li>
+          <li>
+            <a href="Personagens.html">Personagens</a>
+          </li>
+          <li>
+            <a href="RandomizadorCaracter.html">Quiz</a>
+          </li>
+        </ul>
+      </div>
+      <ul class="navbar">
+        <li>
+          <a href="Login.html">Login</a>
+        </li>
+        <li>
+          <a href="Cadastro.html">Cadastro</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+
+  <div class="banner">
+
+  </div>
+  <div class="social">
+    <h3 class="titulos">O QUE É GENSHIN IMPACT?</h3>
+
+    <div class="contexto">
+      <div class="video_div">
+
+        <h3 style="color: white;">TEASER DA HISTORIA DE GENHIN</h3>
+        <iframe width="600px" height="315px" src="https://www.youtube.com/embed/SO__VQZirJ4?si=oqWBJA-_VSa7J43R"
+          title="YouTube video player" frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen></iframe>
+
+      </div>
+      <div class="contexto_div">
+        <p>
+          "Genshin Impact" é um jogo de ação e aventura gratuito, desenvolvido pela empresa chinesa miHoYo. Lançado em
+          setembro de 2020, o jogo está disponível em várias plataformas, incluindo PC, PlayStation, iOS e Android. Ele
+          se destaca por sua jogabilidade de mundo aberto, gráficos impressionantes estilo anime e um sistema de combate
+          dinâmico.<br>
+
+          A história de "Genshin Impact" gira em torno do protagonista, conhecido como O Viajante, que viaja entre
+          diferentes reinos em busca de seu irmão perdido. O jogo se passa no mundo de Teyvat, um vasto e colorido
+          reino, dividido em sete nações, cada uma representando um elemento diferente.<br>
+
+          O elemento distintivo de "Genshin Impact" é o sistema de Invocação, que permite aos jogadores desbloquear
+          novos personagens e armas. Os personagens têm afinidades com diferentes elementos, como fogo, água, terra,
+          vento, entre outros, o que adiciona uma camada estratégica ao combate.<br>
+
+          O jogo incentiva a exploração do mundo aberto, oferecendo diversas missões, quebra-cabeças e desafios
+          espalhados por seu vasto cenário. Além disso, "Genshin Impact" tem uma mecânica de alternância entre
+          personagens, possibilitando aos jogadores formar equipes estratégicas com base nas habilidades elementares dos
+          personagens.<br>
+
+          "Genshin Impact" recebeu aclamação pela qualidade visual, vastidão do mundo, mecânicas de combate e pela sua
+          abordagem "gacha" no sistema de Invocação. No entanto, a presença de microtransações e a mecânica de resina
+          originalmente limitada geraram alguma controvérsia. Em todo caso, o jogo continua a ser atualizado
+          regularmente, introduzindo novos personagens, regiões e eventos para manter os jogadores engajados.
+        </p>
+      </div>
+    </div><hr>
+
+    <h3 class="titulos">O jogo contribue com os objetivos da ONU!!</h3>
+
+    <div class="onu_div">
+      <img class="bunny_dance" src="assets/imgs/Background/bunny-dance.gif" alt="bunny_gif">
+      <div class="Motivos_div">
+        <ol>
+          <li>
+            Interação Social:
+            <ul>
+              <li>
+                O jogo incorpora elementos multijogador, permitindo que os jogadores colaborem e interajam socialmente. A interação positiva entre jogadores contribui para o bem-estar social e emocional.
+              </li>
             </ul>
-          </div>
-            <ul class="navbar">
-            <li>
-              <a href="Login.html">Login</a>
-            </li>
-            <li>
-              <a href="Cadastro.html">Cadastro</a>
-            </li>
-          </ul>
-        </div>
+          </li>
+          <li>
+            Desenvolvimento de Habilidades Estratégicas e Cognitivas:
+            <ul>
+              <li>
+                O jogo envolve desafios e quebra-cabeças que exigem raciocínio estratégico e resolução de problemas. O estímulo cognitivo e a atividade mental contribuem para a saúde mental e o desenvolvimento de habilidades cognitivas.
+              </li>
+            </ul>
+          </li>
+          <li>
+            Atualizações e Comunidade Ativa:
+            <ul>
+              <li>
+                Atualizações regulares do jogo e uma comunidade ativa proporcionam uma experiência de jogo em constante evolução. Isso mantém o interesse dos jogadores, incentivando uma comunidade engajada e contribuindo para o aspecto social e emocional do bem-estar.
+              </li>
+            </ul>
+          </li>
+        </ol>
+      </div>
+      <div class="saude_bem_estar_div">
+        <img src="assets/imgs/Background/ObjetivoOnu.jpg" alt="">
+      </div>
+    </div><hr>
+
+    <h3 class="titulos">SISTEMA GACHA</h3>
+
+    <div class="wishsimulator">
+      <iframe src="https://wishsimulator.app/" width="925px" height="540px"></iframe>
     </div>
 
-    <div class="banner">
-        
-      </div>
+  </div>
+  <div class="footer">
+
+  </div>
 </body>
+
 </html>
