--- a/Site/public/Cadastro.html
+++ b/Site/public/Cadastro.html
@@ -181,7 +181,9 @@
         </div>
         
     </div>
+    <img src="assets/imgs/Background/aether_encarando.gif" alt="aether" class="aether">
     <img src="assets/imgs/Background/zhongli_espreitando.gif" alt="zhongli" class="zhongli">
+    <img src="assets/imgs/Background/zhongli_espreitando.gif" alt="zhongli" class="zhongli2">
 </body>
 
 </html>
