footer tela inicio

--- a/Site/public/index.html
+++ b/Site/public/index.html
@@ -89,7 +89,7 @@
     <h3 class="titulos">O jogo contribue com os objetivos da ONU!!</h3>
 
     <div class="onu_div">
-      <img class="bunny_dance" src="assets/imgs/Background/bunny-dance.gif" alt="bunny_gif">
+      <img class="kazuha" src="assets/imgs/Background/kazuha_esperando.webp" alt="bunny_gif">
       <div class="Motivos_div">
         <ol>
           <li>
@@ -131,7 +131,7 @@
 
   </div>
   <div class="footer">
-
+    <h3>SPTech &copy; 2023 || Felipe Conde</h3>
   </div>
 </body>
 
