arrumando problema na chegada de dados

--- a/Site/public/RandomizadorCaracter.html
+++ b/Site/public/RandomizadorCaracter.html
@@ -69,8 +69,8 @@
     </div>
 
     <div id="div_pontuacao" class="container2">
-      usuario: <span id="usuario"></span><br><br>
-      Pontos: <span id="pontos"></span>
+      usuario: <span id="usuario_span"></span><br><br>
+      Pontos: <span id="pontos_span"></span>
     </div>
 
     <img id="img_paimon" src="assets/imgs/Background/esperando.webp" alt="paimon" class="paimon">
