--- a/Site/public/Personagens.html
+++ b/Site/public/Personagens.html
@@ -147,6 +147,9 @@
         </div>
         <div class="div_contexto">
           <h1>ALBEDO</h1>
+          <div id="div_arma"></div>
+          <div id="div_alimento"></div>
+          <div id="div_raridade"></div>
           <p>
             O misterioso Albedo é o Chefe Alquimista e Capitão da Equipe de Investigação dos Cavaleiros de Favonius, com
             Sucrose como sua assistente. Ele tem um desejo infinito de aprender sobre o mundo de Teyvat, estudando
